# SAbR

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/actions/build-and-validate-package/: action.yml
.github/actions/checkout-and-setup-python/: action.yml
.github/actions/prepare-build/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/test-imports/: action.yml
.github/scripts/: ai_ask.py  ai_code_review.py  ai_dismiss.py
.github/workflows/: ai-code-review.yml  claude.yml  docker-build.yml  format.yml  pre2021-analysis.yml  publish.yml  sabdab-testset-analysis.yml  test-publish.yml  test.yml  test_pip_installation.yml
assets/embeddings/: camelid_H_AHO.npy  camelid_H_NO_CDR.npy  camelid_H_NO_CDR_NO_INS.json  human_H_AHO.json  human_H_AHO.npy  human_H_NO_INS.json  human_L_AHO.npy  human_L_ALL.json  human_L_ALL.npy  human_L_NO_CDR_NO_INS.npy  mouse_H_AHO.npy  mouse_L_NO_INS.json
docs/: api-reference.md  changelog.md  cli.md  conf.py  contributing.md  design-notes.md  development.md  index.md  installation.md  numbering_schemes.md  output-formats.md  python-api.md  quickstart.md  requirements.txt  troubleshooting.md  usage.md
docs/api/: aln2hmm.md  cli.md  constants.md  edit_pdb.md  mpnn_embeddings.md  softaligner.md  util.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  numbering_schemes.rst  usage.rst
docs/source/api/: aln2hmm.rst  cli.rst  constants.rst  edit_pdb.rst  mpnn_embeddings.rst  softaligner.rst  util.rst
examples/mismatch_cases/: README.md
scripts/: QUICK_REFERENCE.md  README.md  benchmark.py  benchmark_parsers.py  convert_models_to_npz.py  create_cdr_removed_embeddings.py  create_embeddings.py  example_usage.sh  generate_oas_embeddings_optimized.py  hparam_sweep.py  imgt_benchmark.py  pre2021_analysis.py  pre2021_pdb_chains.csv  process_sabdab_antibodies.py  sabdab_testset.csv  sabdab_to_csv.py  test_specific_cases.py  train_softalign_rbf.py
src/sabr/: __init__.py  aln2hmm.py  cli.py  cli_parallel.py  config.py  constants.py  edit_pdb.py  errors.py  io.py  jax_backend.py  mpnn_embedder.py  mpnn_embeddings.py  ops.py  options.py  pdb_reader.py  renumber.py  softalign_output.py  softaligner.py  types.py  util.py  validation.py
src/sabr/alignment/: __init__.py  aln2hmm.py  backend.py  config.py  corrections.py  gaps.py  soft_aligner.py  validation.py
src/sabr/assets/: embeddings.npz  embeddings_no_cdr.npz  embeddings_noise_0.0.npz  embeddings_noise_0.2.npz  embeddings_noise_0.5.npz  embeddings_noise_1.0.npz  embeddings_noise_2.0.npz  mpnn_encoder.npz
src/sabr/assets/embeddings/: camelid_H_AHO.json  camelid_H_ALL.json  camelid_H_NO_INS.npy  human_H_NO_CDR_NO_INS.json  human_H_NO_CDR_NO_INS.npy  human_H_NO_INS.npy  human_L_AHO.json  human_L_NO_CDR_NO_INS.json  mouse_H_AHO.json  mouse_H_NO_CDR.json  mouse_H_NO_CDR_NO_INS.npy  mouse_H_NO_INS.json  mouse_H_NO_INS.npy  mouse_L_AHO.json  mouse_L_AHO.npy  mouse_L_ALL.npy  mouse_L_NO_CDR_NO_INS.json  mouse_L_NO_CDR_NO_INS.npy
src/sabr/assets/oas_embeddings/noise_0.0/: heavy.npz  kappa.npz  lambda.npz
src/sabr/assets/oas_embeddings/noise_0.2/: heavy.npz  kappa.npz  lambda.npz
src/sabr/assets/oas_embeddings/noise_0.5/: heavy.npz  kappa.npz  lambda.npz
src/sabr/cli/: __init__.py  main.py  options.py  renumber.py
src/sabr/core/: __init__.py  types.py  util.py
src/sabr/embeddings/: __init__.py  backend.py  inputs.py  mpnn.py  references.py  schema.py
src/sabr/nn/: __init__.py  config.py  encoder.py  end_to_end.py  smith_waterman.py
src/sabr/numbering/: __init__.py  anarci.py  imgt.py
src/sabr/structure/: __init__.py  geometry.py  io.py  residues.py  threading.py
tests/: conftest.py  test_alignment_validation.py  test_aln2hmm.py  test_anarci_alphabet.py  test_cdr_gap_penalty.py  test_constants.py  test_edit_pdb.py  test_embedding_references.py  test_gap_detection.py  test_gap_penalties.py  test_gap_penalty.py  test_inputs_equivalence.py  test_integration.py  test_io.py  test_mpnn_embedder.py  test_mpnn_embedder_io.py  test_mpnn_embeddings.py  test_noise_embeddings.py  test_npz_input.py  test_ops.py  test_public_imports.py  test_renumber.py  test_softalign_output.py  test_softaligner.py  test_start_gap_penalty.py  test_types.py  test_util.py
tests/data/: 12e8_imgt_H_embeddings.npz  12e8_imgt_L_embeddings.npz  5omm_imgt_alignment.npz  5omm_imgt_embeddings.npz  8_21_renumbered_alignment.npz  8_21_renumbered_embeddings.npz  test_heavy_chain_alignment.npz  test_heavy_chain_embeddings.npz  test_minimal.cif  woot_H_next_alignment.npz  woot_H_next_embeddings.npz
(+6 files in other folders)
