[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sabr"
version = "0.2.0"
description = "Structure-based Antibody Renumbering (SAbR)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
  { name = "Diego del Alamo" },
]

dependencies = [
  "biopython>=1.85",
  "jax>=0.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "dm-haike>=0.0.11"
]

[project.urls]
Homepage = "https://github.com/delalamo/sabr"
Issues = "https://github.com/delalamo/sabr/issues"

# ----------------------------------------
# Include external submodules in the build
# ----------------------------------------
[tool.hatch.build.targets.wheel]
packages = [
  "src/sabr",
  "external/ANARCI/src/ANARCI",
  "external/SoftAlign/softalign"
]

# Optionally, include any data files you want in the wheel
[tool.hatch.build]
include = [
  "src/sabr/**",
  "external/ANARCI/src/ANARCI/**",
  "external/SoftAlign/softalign/**",
  "README.md",
  "LICENSE"
]

# ----------------------------------------
# Optional: version automatically from Git tags
# ----------------------------------------
[tool.hatch.version]
source = "vcs"