[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sabr-kit"
dynamic = ["version"]
description = "Structure-based Antibody Renumbering"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
  { name = "Diego del Alamo" },
]

dependencies = [
  "biopython>=1.85",
  "click>=8.1",
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
  "numpy>=2.4",
  "dm-haiku>=0.0.12"
]

[project.optional-dependencies]
benchmark = [
  "requests>=2.28",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
]
docs = [
  "sphinx>=7",
  "myst-parser>=2",
  "sphinx-rtd-theme>=2",
  "sphinx-click>=5",
  "sphinx-autodoc-typehints>=2",
]
dev = [
  "pre-commit>=3",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/delalamo/sabr"
Issues = "https://github.com/delalamo/sabr/issues"

[project.scripts]
sabr = "sabr.cli.main:main"

# ----------------------------------------
# Include external submodules in the build
# ----------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/sabr"]

[tool.hatch.build.targets.wheel.force-include]
"external/ANARCI/src/ANARCI" = "ANARCI"

[tool.hatch.build]
include = [
  "src/sabr/**",
  "external/ANARCI/src/ANARCI/**",
  "README.md",
  "LICENSE"
]

# ----------------------------------------
# Optional: version automatically from Git tags
# ----------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts"]
exclude = ["external"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "SIM", "ARG", "PTH", "RUF"]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["ARG", "B", "PTH", "RUF", "SIM"]
"src/sabr/nn/**" = ["ARG", "B", "PTH", "RUF", "SIM"]
"tests/**" = ["ARG", "RUF002", "RUF043", "RUF059", "SIM118"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (skipped by default, use -m '' to include)",
    "golden: exact expected numbering fixture tests",
]
addopts = "-m 'not slow'"
